fix(Styles): update selection background color for better visibility

--- a/src/sass/base/_theme-vars.scss
+++ b/src/sass/base/_theme-vars.scss
@@ -51,7 +51,7 @@
   --accent-medium: #b8b8af;
   --accent-strong: #6a6a60;
 
-  --selection-bg: #ccccc7;
+  --selection-bg: #decdb8bd;
 
   --text-primary-rgb: 13, 13, 11;
   --text-secondary-rgb: 58, 58, 53;
